# TFG

./: README.md  bus_objects.h  rules.mk
DynamixelSetup/: Makefile  defines.h  led.h  main.cpp  menu.h  test_main.cpp  timers.cpp  timers.h
Lift/: Makefile  bus_interface.c  bus_interface.h  controller.c  controller.h  defines.h  fsm.c  fsm.h  gpio.h  main.c  position.c  position.h  pwm_control.c  pwm_control.h  qei.c  qei.h  timers.h  velocity.c  velocity.h
Microbrain/: Makefile  TODO.txt  adc.cpp  adc.h  bus_interface.cpp  bus_interface.h  clocking.cpp  color.h  console.cpp  console.h  geometry.cpp  geometry.h  goal_manager.cpp  goal_manager.h  i2c.cpp  i2c.h  led.h  main.cpp  menu.h  routing.cpp  routing.h  serial.cpp  serial.h  shared_defines.h  srf08.cpp  srf08.h  wait.cpp  wait.h
MotorControl_V5.1/: Makefile  Wheel_tuning.ods  bus_interface.c  bus_interface.h  controller.c  defines.h  gpio.h  main.c  odometry.c  odometry.h  path.c  path.h  position.c  position.h  pwm_control.c  pwm_control.h  test.py  timers.c  timers.h  velocity.c  velocity.h
RCServoCAN/: Makefile  automation.h  bus_interface.h  clocking.cpp  defines.h  fsm.h  grande1_automation.cpp  grande2_automation.cpp  grande_automation.cpp  led.h  main.cpp  piccolo1_automation.cpp  piccolo_automation.cpp  piccolo_automation.cpp~  positioni.txt  sensors.cpp  sensors.h  servo.cpp  servo.h  servo_pins.h  simulator_interface.h
RaspberryPi/: configurazione-iniziale.txt
RaspberryPi/resetbuttond/: CMakeLists.txt  resetbuttond  resetbuttond.service.in
RaspberryPi/xbee-tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  hexinfo  rtspcmd  xbeedump  xbeemux  xbeemux.service  xbeemux.service.in
RaspberryPi/xbee-tools/xbeemux-core/: MessageQueue.cpp  MessageQueue.h  Service.cpp  Service.h  TcpServer.cpp  TcpServer.h  Utils.cpp  Utils.h  XBee.cpp  XBee.h  XBeeAddress.cpp  XBeeAddress.h  XBeeDriver.cpp  XBeeDriver.h  main.cpp
RaspberryPi/xbee-tools/xbeertsp/: DeviceInfo.cpp  DeviceInfo.h  HexImage.cpp  HexImage.h  NotifyStatus.cpp  NotifyStatus.h  Utils.cpp  Utils.h  XBeeRtspClientHandler.cpp  XBeeRtspClientHandler.h  XBeeRtspEndpointInfo.cpp  XBeeRtspEndpointInfo.h  XBeeRtspInterface.cpp  XBeeRtspInterface.h  XBeeRtspJobManager.cpp  XBeeRtspJobManager.h  XBeeRtspJobs.cpp  XBeeRtspJobs.h  XBeeRtspRequestParser.cpp  XBeeRtspRequestParser.h  XBeeRtspService.cpp  XBeeRtspService.h  hexinfo.cpp  rtspcmd.cpp
RaspberryPi/xbee-tools/xbeestdio/: XBeeStdioClientHandler.cpp  XBeeStdioClientHandler.h  XBeeStdioEndpoint.cpp  XBeeStdioEndpoint.h  XBeeStdioMessage.cpp  XBeeStdioMessage.h  XBeeStdioService.cpp
RaspberryPi/xbee-tools/xbeetap/: XBeeTapClientHandler.cpp  XBeeTapClientHandler.h  XBeeTapService.cpp  xbeedump.cpp
ZigBee2CAN/: Makefile  ax12_interface.cpp  (+24 more)
(+55 files in other folders)
